--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
     const controls = new THREE.PointerLockControls(camera, document.body);
     scene.add(controls.getObject());
 
-    // Bewegungsgeschwindigkeit und -richtung
-    const moveSpeed = 0.1;
-    const moveDirection = { forward: false, backward: false, left: false, right: false };
-
     // Lichtquelle
     const light = new THREE.PointLight(0xffffff, 1);
     light.position.set(10, 10, 10);
@@ -62,6 +58,8 @@
     });
 
     // Tastatureingaben behandeln
+    const moveDirection = { forward: false, backward: false, left: false, right: false };
+
     function onKeyDown(event) {
       switch (event.code) {
         case 'ArrowUp':
@@ -106,7 +104,7 @@
 
     // Ereignis: Block hinzufügen oder entfernen
     function onMouseClick(event) {
-      raycaster.setFromCamera({ x: 0, y: 0 }, camera);
+      raycaster.setFromCamera(mouse, camera);
       const intersects = raycaster.intersectObjects(blocks.children);
 
       if (intersects.length > 0) {
@@ -132,6 +130,11 @@
       requestAnimationFrame(animate);
 
       if (controls.isLocked) {
+        const delta = 0.01;
+        const speed = 0.5;
+
+        const moveSpeed = delta * speed;
+
         if (moveDirection.forward) controls.moveForward(moveSpeed);
         if (moveDirection.backward) controls.moveForward(-moveSpeed);
         if (moveDirection.left) controls.moveRight(-moveSpeed);
